--- a/Client_App/Views/Forms/Forms1/Form_14.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_14.axaml
@@ -16,6 +16,7 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_14VM"
     mc:Ignorable="d"
+	KeyUp="DataGrid_KeyUp"
 	x:Name="1.4"
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
@@ -154,57 +155,47 @@
 			<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
 				<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
                     <Grid.ContextMenu>
-                        <ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
+                        <ContextMenu x:CompileBindings="True"
+                                     x:DataType="vm:Form_14VM"
+                                     DataContext="{Binding DataContext, ElementName=dataGrid}">
                             <MenuItem Header="Выделить всё"
-									  Command="{Binding SelectAll}"
-									  IsHitTestVisible="True"
-									  InputGesture="Ctrl+A"
-									  HotKey="Ctrl+A"/>
+                                      Command="{Binding SelectAll}"
+                                      IsHitTestVisible="True"
+                                      InputGesture="Ctrl+A"/>
                             <MenuItem Header="Добавить строку"
-									  Command="{Binding AddRow}"
-									  InputGesture="Ctrl+T"
-									  HotKey="Ctrl+T"/>
+                                      Command="{Binding AddRow}"
+                                      InputGesture="Ctrl+T"/>
                             <MenuItem Header="Добавить N строк"
-									  Command="{Binding AddRows}"
-									  InputGesture="Ctrl+N"
-									  HotKey="Ctrl+N"/>
+                                      Command="{Binding AddRows}"
+                                      InputGesture="Ctrl+N"/>
                             <MenuItem Header="Добавить N строк перед"
-									  Command="{Binding AddRowsIn}"
-									  CommandParameter="{Binding SelectedForms}"
-									  InputGesture="Ctrl+I"
-									  HotKey="Ctrl+I"/>
+                                      Command="{Binding AddRowsIn}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      InputGesture="Ctrl+I"/>
                             <MenuItem Header="Копировать"
-									  Command="{Binding CopyRows}"
-									  CommandParameter="{Binding SelectedForms}"
-									  InputGesture="Ctrl+C"
-									  HotKey="Ctrl+C"/>
+                                      Command="{Binding CopyRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      InputGesture="Ctrl+C"/>
                             <MenuItem Header="Вставить"
-									  Command="{Binding PasteRows}"
-									  InputGesture="Ctrl+V"
-									  HotKey="Ctrl+V"/>
+                                      Command="{Binding PasteRows}"
+                                      InputGesture="Ctrl+V"/>
                             <MenuItem Header="Удалить выбранные строчки"
-									  Command="{Binding DeleteRows}"
-									  CommandParameter="{Binding SelectedForms}"
-									  InputGesture="Ctrl+D"
-									  HotKey="Ctrl+D"/>
+                                      Command="{Binding DeleteRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      InputGesture="Ctrl+D"/>
                             <MenuItem Header="Выставить номер"
-									  Command="{Binding SetNumberOrder}"
-									  InputGesture="Ctrl+O"
-									  HotKey="Ctrl+O"/>
-                            <!--<MenuItem Header="Сортировать по номеру п/п"
-										  Command="{Binding SortForms}"
-										  InputGesture="Ctrl+L"
-										  HotKey="Ctrl+L"/>-->
+                                      Command="{Binding SetNumberOrder}"
+                                      InputGesture="Ctrl+O"/>
+                            <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
+                                      Command="{Binding SortForms}"
+                                      HotKey="Ctrl+L"/> -->
                             <MenuItem Header="Очистить строчки"
-									  Command="{Binding DeleteDataInRows}"
-									  CommandParameter="{Binding SelectedForms}"
-									  InputGesture="Ctrl+K"
-									  HotKey="Ctrl+K"/>
+                                      Command="{Binding DeleteDataInRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      InputGesture="Ctrl+K"/>
                             <MenuItem Header="Перевести РВ в РАО"
-									  Command="{Binding SourceTransmission}"
-									  CommandParameter="{Binding SelectedForm}"
-									  InputGesture="Ctrl+J"
-									  HotKey="Ctrl+J"/>
+                                      Command="{Binding SourceTransmission}"
+                                      CommandParameter="{Binding SelectedForm}"/>
                         </ContextMenu>
                     </Grid.ContextMenu>
                     <Grid Classes="tableHeader" Grid.Row="0"
@@ -306,6 +297,7 @@
 					<DataGrid 
                         Grid.Row="1"
                         Classes="table"
+						x:CompileBindings="True"
 						x:Name="dataGrid"
 						Items="{Binding FormList}"
                         SelectedItem="{Binding SelectedForm}">
@@ -320,7 +312,6 @@
                             <DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 											    Width="40"
                                                 IsReadOnly="True"
-                                                x:CompileBindings="True"
                                                 x:DataType="forms1:Form14">
 								<DataGridTextColumn.HeaderTemplate>
 									<DataTemplate>
@@ -346,7 +337,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -364,7 +355,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
 										<Grid ColumnDefinitions="*,Auto">
 											<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 											<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -386,7 +377,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -404,7 +395,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Name.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -422,7 +413,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Sort.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -440,7 +431,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -458,7 +449,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -476,7 +467,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
 										<Grid ColumnDefinitions="*,Auto">
 											<TextBox Grid.Column="0" Text="{Binding ActivityMeasurementDate.Value, Mode=TwoWay}"/>
 											<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -498,7 +489,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Volume.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -516,7 +507,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -534,7 +525,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding AggregateState.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -552,7 +543,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -570,7 +561,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -588,7 +579,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+									<DataTemplate x:DataType="forms1:Form14">
 										<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -606,7 +597,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+									<DataTemplate x:DataType="forms1:Form14">
 										<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -624,7 +615,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
 										<Grid ColumnDefinitions="*,Auto">
 											<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 											<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -646,7 +637,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -664,7 +655,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -682,7 +673,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -700,7 +691,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -718,7 +709,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form14">
+                                    <DataTemplate x:DataType="forms1:Form14">
                                         <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -783,6 +774,7 @@
 						</StackPanel.ContextMenu>
 						<TextBlock Margin="5">Примечания</TextBlock>
 						<DataGrid Classes="notesTable"
+								  x:CompileBindings="True"
 								  Items="{Binding NoteList}"
 								  SelectedItem="{Binding SelectedNote}">
 							<interactivity:Interaction.Behaviors>
@@ -793,7 +785,7 @@
 							<DataGrid.Columns>
 								<DataGridTemplateColumn Header="№ строки" Width="80">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
@@ -801,7 +793,7 @@
 							
 								<DataGridTemplateColumn Header="№ графы" Width="80">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
@@ -809,7 +801,7 @@
 							
 								<DataGridTemplateColumn Header="Пояснения" Width="*">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
