--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -16,9 +16,8 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_11VM"
     mc:Ignorable="d"
-	KeyUp="DataGrid_KeyDown"
+	KeyUp="DataGrid_KeyUp"
 	x:Name="1.1"
-    
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
 
@@ -169,7 +168,9 @@
 		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
 			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 				<Grid.ContextMenu>
-					<ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
+					<ContextMenu x:CompileBindings="True" 
+                                 x:DataType="vm:Form_11VM"
+                                 DataContext="{Binding DataContext, ElementName=dataGrid}">
 						<MenuItem Header="Выделить всё"
                                   Command="{Binding SelectAll}"
                                   IsHitTestVisible="True"
@@ -195,24 +196,36 @@
                                   Command="{Binding DeleteRows}"
                                   CommandParameter="{Binding SelectedForms}"
                                   InputGesture="Ctrl+D"/>
+                        <MenuItem Header="Очистить строчки"
+                                  Command="{Binding DeleteDataInRows}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+K"/>
                         <MenuItem Header="Выставить номер"
                                   Command="{Binding SetNumberOrder}"
                                   InputGesture="Ctrl+O"/>
 						<!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
                                       HotKey="Ctrl+L"/> -->
-						<MenuItem Header="Очистить строчки"
-								  Command="{Binding DeleteDataInRows}"
+                        <MenuItem Header="Скопировать в буфер имя паспорта"
+                                  Command="{Binding CopyPasName}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+K"/>
+                                  InputGesture="Ctrl+U"/>
+                        <MenuItem Header="Открыть паспорт"
+                                  Command="{Binding OpenPas}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+P"/>
+                        <MenuItem Header="Выгрузка истории движения источника"
+                                  Command="{Binding ExcelExportSourceMovementHistory}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+E"/>
                         <MenuItem Header="Рассчитать категорию"
                                   Command="{Binding CategoryCalculationFromReport}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  HotKey="Ctrl+K"/>
+                                  InputGesture="Ctrl+Y"/>
 						<MenuItem Header="Перевести РВ в РАО"
 								  Command="{Binding SourceTransmission}"
 								  CommandParameter="{Binding SelectedForm}"
-								  HotKey="Ctrl+J"/>
+                                  InputGesture="Ctrl+J"/>
 					</ContextMenu>
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
