--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -16,6 +16,7 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_12VM"
     mc:Ignorable="d"
+    KeyUp="DataGrid_KeyUp"
 	x:Name="1.2"
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
@@ -154,57 +155,47 @@
         <ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
             <Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
                 <Grid.ContextMenu>
-                    <ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
+                    <ContextMenu x:CompileBindings="True" 
+                                 x:DataType="vm:Form_12VM" 
+                                 DataContext="{Binding DataContext, ElementName=dataGrid}">
                         <MenuItem Header="Выделить всё"
                                   Command="{Binding SelectAll}"
                                   IsHitTestVisible="True"
-                                  InputGesture="Ctrl+A"
-                                  HotKey="Ctrl+A"/>
+                                  InputGesture="Ctrl+A"/>
                         <MenuItem Header="Добавить строку"
                                   Command="{Binding AddRow}"
-                                  InputGesture="Ctrl+T"
-                                  HotKey="Ctrl+T"/>
+                                  InputGesture="Ctrl+T"/>
                         <MenuItem Header="Добавить N строк"
                                   Command="{Binding AddRows}"
-                                  InputGesture="Ctrl+N"
-                                  HotKey="Ctrl+N"/>
+                                  InputGesture="Ctrl+N"/>
                         <MenuItem Header="Добавить N строк перед"
                                   Command="{Binding AddRowsIn}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+I"
-                                  HotKey="Ctrl+I"/>
+                                  InputGesture="Ctrl+I"/>
                         <MenuItem Header="Копировать"
                                   Command="{Binding CopyRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+C"
-                                  HotKey="Ctrl+C"/>
+                                  InputGesture="Ctrl+C"/>
                         <MenuItem Header="Вставить"
                                   Command="{Binding PasteRows}"
-                                  InputGesture="Ctrl+V"
-                                  HotKey="Ctrl+V"/>
+                                  InputGesture="Ctrl+V"/>
                         <MenuItem Header="Удалить выбранные строчки"
                                   Command="{Binding DeleteRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+D"
-                                  HotKey="Ctrl+D"/>
+                                  InputGesture="Ctrl+D"/>
                         <MenuItem Header="Выставить номер"
                                   Command="{Binding SetNumberOrder}"
-                                  InputGesture="Ctrl+O"
-                                  HotKey="Ctrl+O"/>
-                        <!--<MenuItem Header="Сортировать по номеру п/п"
+                                  InputGesture="Ctrl+O"/>
+                        <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
-                                      InputGesture="Ctrl+L"
                                       HotKey="Ctrl+L"/> -->
                         <MenuItem Header="Очистить строчки"
                                   Command="{Binding DeleteDataInRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+K"
-                                  HotKey="Ctrl+K"/>
+                                  InputGesture="Ctrl+K"/>
                         <MenuItem Header="Перевести РВ в РАО"
                                   Command="{Binding SourceTransmission}"
-                                  CommandParameter="{Binding SelectedForm}"
-                                  InputGesture="Ctrl+J"
-                                  HotKey="Ctrl+J"/>
+                                  CommandParameter="{Binding SelectedForm}"/>
                     </ContextMenu>
                 </Grid.ContextMenu>
                 <Grid Classes="tableHeader" Grid.Row="0"
@@ -747,6 +738,7 @@
                     </StackPanel.ContextMenu>
                     <TextBlock Margin="5">Примечания</TextBlock>
                     <DataGrid Classes="notesTable"
+                              x:CompileBindings="True"
                               Items="{Binding NoteList}"
                               SelectedItem="{Binding SelectedNote}">
                         <interactivity:Interaction.Behaviors>
@@ -757,7 +749,7 @@
                         <DataGrid.Columns>
                             <DataGridTemplateColumn Header="№ строки" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+                                    <DataTemplate x:DataType="forms:Note">
                                         <TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -765,7 +757,7 @@
 
                             <DataGridTemplateColumn Header="№ графы" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+                                    <DataTemplate x:DataType="forms:Note">
                                         <TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -773,7 +765,7 @@
 
                             <DataGridTemplateColumn Header="Пояснения" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+                                    <DataTemplate x:DataType="forms:Note">
                                         <TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
